Setup snapshot testings
Behavior matching tests is helpful, but it prevents me from adding,
changing or improving existing functionality. Snapshot testing solves
this problem. Here is my plan:

1. Add a way to fix time (new CLI arg or C API something)
2. Create snapshots for behavior matching tests
3. Delete behavior matching tests

This file-based snapshotting works great with external tools. In a
future when I add a structured output (e.g. JSON,) difftastic would help
diff-ing a lot.

The reason I choose "version" command is it does not rely on system
time. Even "report" command prints current time to output and that
messes snapshot testing up.

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -20,3 +20,10 @@ SPDX-FileCopyrightText = [
 	"(c) 2000,2004,2022 Daniel Risacher",
 ]
 SPDX-License-Identifier = "GPL-3.0-only"
+
+[[annotations]]
+path = [
+	"tests/snapshot/**.txt",
+]
+SPDX-FileCopyrightText = "Copyright (C) 2025 Shota FUJI"
+SPDX-License-Identifier = "GPL-3.0-only"
